--- a/index.html
+++ b/index.html
@@ -32,31 +32,83 @@
     </header>
     <main>
         <section>
-            <div class="flex flex-col justify-center items-center w-auto h-[300px]">
-                <div class="flex justify-center items-center w-[350px] h-[60px]">
-                    <span class="flex justify-center items-center w-[50px] text-[#AAAAAA] text-[20px] font-bold">
-                        01
-                    </span>
-                    <p class="flex justify-center items-center text-[#AAAAAA] text-[24px] font-bold">
-                        &lt;Olá, Eu sou Kleiton !&gt; </p>
+            <div class="flex flex-col justify-center items-center h-[300px] mb-[30px]">
+                <div class="flex flex-col w-auto h-[240px]">
+                    <div class="flex mb-2">
+                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold"> 01 </p>
+                        </div>
+                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold">
+                                &lt;Olá, Eu sou Kleiton !&gt;
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex mb-2">
+                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold"> 02 </p>
+                        </div>
+                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold">
+                                &lt;Sou desenvolvedor
+                            </p>
+                        </div>
+                        <div class="flex justify-center items-center  w-[40px] h-[60px] ml-[-20px]">
+                            <img class="w-[30px] h-[30px]" src="assets/img/computador.png" alt="">
+                        </div>
+                    </div>
+                    <div class="flex mb-2">
+                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold"> 03 </p>
+                        </div>
+                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                            <p class="text-[24px] text-[#AAAAAA] font-bold">
+                                Front-End.&gt;
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center w-auto h-[60px]">
+                        <p class="text-[12px] text-[#AAAAAA] font-bold">Eu também projeto alguns sites para estudos...</p>
+                    </div>
                 </div>
-                <div class="flex justify-center items-center w-[350px] h-[60px]">
-                    <span class="flex justify-center items-center w-[50px] text-[#AAAAAA] text-[20px] font-bold">
-                        02
-                    </span>
-                    <p class="flex justify-center items-center text-[#AAAAAA] text-[24px] font-bold">
-                        &lt;Sou desenvolvedor <i class="fas fa-desktop text-[24px] text-[#AAAAAA] ml-2"></i>
-                    </p>
+            </div>
+        </section>
+        <section>
+            <div class="flex flex-col justify-center items-center h-[700px]">
+                <div class="w-auto h-[350px]">
+                    <div class="flex justify-center items-center w-[220px] h-[50px] mb-[20px]">
+                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
+                        <img class="w-[40px] h-[40px]" src="assets/img/criacao.png" alt="">
+                    </div>
+                    <div class="w-[300px] h-[120px] mb-[15px]">
+                        <p class="text-[15px] text-[#AAAAAA] font-bold"> 
+                        Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver 
+                        designs simples, mas criativos, para aprender e me divertir no processo.
+                        Uso os seguintes apps: 
+                        </p>
+                    </div>
+                    <div class="flex w-auto h-[50x]">
+                        <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/figma.png" alt="">
+                        <img class="w-[50px] h-[50px] rounded-full" src="assets/img/canva.png" alt="">
+                    </div>
                 </div>
-                <div class="flex justify-center items-center w-[350px] h-[60px]">
-                    <span class="flex justify-center items-center w-[50px] text-[#AAAAAA] text-[20px] font-bold">
-                        03
-                    </span>
-                    <p class="flex justify-start items-center w-[260px] text-[#AAAAAA] text-[24px] font-bold">
-                        Front-End.&gt; </p>
-                </div>
-                <div class="flex justify-center items-center w-[350px] h-[60px]">
-                    <p class="text-[#AAAAAA] text-[12px] font-bold">Eu também projeto alguns sites para estudos...</p>
+                <div class="w-auto h-[350px]">
+                    <div class="flex justify-center items-center w-[220px] h-[50px] mb-[20px]">
+                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
+                        <img class="w-[40px] h-[40px]" src="assets/img/formato-html.png" alt="">
+                    </div>
+                    <div class="w-[300px] h-[120px] mb-[15px]">
+                        <p class="text-[15px] text-[#AAAAAA] font-bold"> 
+                            Sou um desenvolvedor Front-End, Estou sempre em busca de aprimorar minhas habilidades .
+                            Atualmente tenho programo e desenvolvo nas seguinte tecnologias: 
+                        </p>
+                    </div>
+                    <div class="flex w-auto h-[50x]">
+                        <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/html-5.png" alt="">
+                        <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/css-3.png" alt="">
+                        <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/js.png" alt="">
+                        <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/tailwindcss.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
