--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/output.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="bg-[#323232]">
@@ -35,20 +37,20 @@
             <div class="flex flex-col justify-center items-center h-[300px] mb-[30px]">
                 <div class="flex flex-col w-auto h-[240px]">
                     <div class="flex mb-2">
-                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                        <div class="flex justify-center items-center w-[50px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold"> 01 </p>
                         </div>
-                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                        <div class="flex justify-start items-center w-[265px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold">
                                 &lt;Olá, Eu sou Kleiton !&gt;
                             </p>
                         </div>
                     </div>
                     <div class="flex mb-2">
-                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                        <div class="flex justify-center items-center w-[50px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold"> 02 </p>
                         </div>
-                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                        <div class="flex justify-start items-center w-[265px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold">
                                 &lt;Sou desenvolvedor
                             </p>
@@ -58,33 +60,34 @@
                         </div>
                     </div>
                     <div class="flex mb-2">
-                        <div class="flex justify-center items-center w-[50px] h-[60px]"> 
+                        <div class="flex justify-center items-center w-[50px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold"> 03 </p>
                         </div>
-                        <div class="flex justify-start items-center w-[265px] h-[60px]"> 
+                        <div class="flex justify-start items-center w-[265px] h-[60px]">
                             <p class="text-[24px] text-[#AAAAAA] font-bold">
                                 Front-End.&gt;
                             </p>
                         </div>
                     </div>
                     <div class="flex justify-center items-center w-auto h-[60px]">
-                        <p class="text-[12px] text-[#AAAAAA] font-bold">Eu também projeto alguns sites para estudos...</p>
+                        <p class="text-[12px] text-[#AAAAAA] font-bold">Eu também projeto alguns sites para estudos...
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="flex flex-col justify-center items-center h-[700px]">
+            <div class="flex flex-col justify-center items-center h-[700px] mb-[30px]">
                 <div class="w-auto h-[350px]">
                     <div class="flex justify-center items-center w-[220px] h-[50px] mb-[20px]">
                         <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
                         <img class="w-[40px] h-[40px]" src="assets/img/criacao.png" alt="">
                     </div>
                     <div class="w-[300px] h-[120px] mb-[15px]">
-                        <p class="text-[15px] text-[#AAAAAA] font-bold"> 
-                        Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver 
-                        designs simples, mas criativos, para aprender e me divertir no processo.
-                        Uso os seguintes apps: 
+                        <p class="text-[15px] text-[#AAAAAA] font-bold">
+                            Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver
+                            designs simples, mas criativos, para aprender e me divertir no processo.
+                            Uso os seguintes apps:
                         </p>
                     </div>
                     <div class="flex w-auto h-[50x]">
@@ -98,9 +101,9 @@
                         <img class="w-[40px] h-[40px]" src="assets/img/formato-html.png" alt="">
                     </div>
                     <div class="w-[300px] h-[120px] mb-[15px]">
-                        <p class="text-[15px] text-[#AAAAAA] font-bold"> 
+                        <p class="text-[15px] text-[#AAAAAA] font-bold">
                             Sou um desenvolvedor Front-End, Estou sempre em busca de aprimorar minhas habilidades .
-                            Atualmente tenho programo e desenvolvo nas seguinte tecnologias: 
+                            Atualmente tenho programo e desenvolvo nas seguinte tecnologias:
                         </p>
                     </div>
                     <div class="flex w-auto h-[50x]">
@@ -109,6 +112,47 @@
                         <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/js.png" alt="">
                         <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/tailwindcss.png" alt="">
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="flex flex-col justify-center items-center w-auto h-auto mb-[30px]">
+                <div class="flex justify-start items-center w-[310px] h-[100px] mb-[10px]">
+                    <p class="text-[40px] text-[#AAAAAA] font-bold">
+                        Ao longo dos anos,
+                    </p>
+                </div>
+                <div class="flex justify-start items-center w-[310px] h-auto mb-[10px]">
+                    <p class="text-[15px] text-[#AAAAAA] font-bold">
+                        Acabei me formando em Análise e Desenvolvimento de Sistemas e atualmente curso Ciência da
+                        Computação e Engenharia de Software. Desde o início da minha trajetória profissional, sempre fui
+                        movido pela curiosidade e pela vontade de aprender. Ao longo dos anos, adquiri experiência no
+                        setor administrativo, atuando na 7Y Distribuidora em funções que exigiam atenção aos detalhes,
+                        organização e análise de dados, como Assistente de Faturamento.
+                    </p>
+                </div>
+                <div class="flex justify-start items-center w-[310px] h-auto mb-[10px]">
+                    <p class="text-[15px] text-[#AAAAAA] font-bold">
+                        Com um olhar voltado para a tecnologia, decidi direcionar minha carreira para o desenvolvimento
+                        Front-End. Tenho conhecimento em HTML5, CSS3, TailwindCSS e JavaScript, além de estar me
+                        aprofundando em frameworks modernos e explorando conceitos de desenvolvimento web. Também possuo
+                        noções básicas de Node.js e SQL, o que me permite compreender melhor o funcionamento do back-end
+                        e integrar soluções eficientes.
+                    </p>
+                </div>
+                <div class="flex justify-start items-center w-[310px] h-auto mb-[10px]">
+                    <p class="text-[15px] text-[#AAAAAA] font-bold">
+                        Meu objetivo é construir interfaces intuitivas e responsivas, proporcionando experiências
+                        fluidas aos usuários. Acredito que a tecnologia deve ser acessível e bem estruturada, e busco
+                        sempre aprimorar minhas habilidades para entregar soluções modernas e eficazes.
+                    </p>
+                </div>
+                <div class="flex justify-start items-center w-[310px] h-auto">
+                    <p class="text-[15px] text-[#AAAAAA] font-bold">
+                        Atualmente, estou em transição de carreira e aberto a oportunidades que me permitam aplicar meus
+                        conhecimentos em um ambiente colaborativo. Se você procura um profissional comprometido e
+                        apaixonado por desenvolvimento, estou pronto para encarar novos desafios!
+                    </p>
                 </div>
             </div>
         </section>
