new area projects

--- a/index.html
+++ b/index.html
@@ -157,6 +157,63 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
+                <div class="flex flex-col justify-center items-center mb-[40px]">
+                    <div class="w-[310px] h-[150px]">
+                        <div class="w-[210px] h-auto mb-[15px]">
+                            <p class="h-[50px] text-[40px] text-[#AAAAAA] font-bold"> Meus </p>
+                            <p class="h-[50px] text-[40px] text-[#AAAAAA] font-bold"> Projetos </p>
+                        </div>
+                        <div class="w-[210px] h-[50px]">
+                            <p class="text-[15px] text-[#AAAAAA] font-bold">
+                                Veja alguns dos trabalhos e projetos que já realizei
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center w-[310px] h-[650px] bg-white/30">
+                    <div class="flex flex-col justify-center items-center">
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[20px] font-bold"> Veja alguns designer que eu fiz </p>
+                        </div>
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[15px] font-medium">
+                                Click no botão a baixo para ver
+                                meus projetos que fiz para meu desenvolvimento profissional
+                            </p>
+                        </div>
+                        <div class="w-[225px] h-auto">
+                            <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
+                                <p class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"> Veja aqui </p>
+                                <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="border w-[250px] border-white mt-[50px] mb-[50px]"> </div>
+
+                    <div class="flex flex-col justify-center items-center">
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[20px] font-bold"> Veja sites alguns sites que fiz </p>
+                        </div>
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[15px] font-medium">
+                                Click no botão a baixo para ver
+                                alguns sites que programei desenvolver minhas habilidades
+                            </p>
+                        </div>
+                        <div class="w-[225px] h-auto">
+                            <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
+                                <p class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"> Veja aqui </p>
+                                <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
