--- a/index.html
+++ b/index.html
@@ -80,25 +80,8 @@
         <section>
             <div class="flex flex-col justify-center items-center h-[700px] mb-[30px]">
                 <div class="w-auto h-[350px]">
-                    <div class="flex justify-center items-center w-[220px] h-[50px] mb-[20px]">
-                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
-                        <img class="w-[40px] h-[40px]" src="assets/img/criacao.png" alt="">
-                    </div>
-                    <div class="w-[300px] h-[120px] mb-[15px]">
-                        <p class="text-[15px] text-[#AAAAAA] font-bold">
-                            Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver
-                            designs simples, mas criativos, para aprender e me divertir no processo.
-                            Uso os seguintes apps:
-                        </p>
-                    </div>
-                    <div class="flex w-auto h-[50x]">
-                        <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/figma.png" alt="">
-                        <img class="w-[50px] h-[50px] rounded-full" src="assets/img/canva.png" alt="">
-                    </div>
-                </div>
-                <div class="w-auto h-[350px]">
-                    <div class="flex justify-center items-center w-[220px] h-[50px] mb-[20px]">
-                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
+                    <div class="flex justify-start items-center w-[310px] h-[50px] mb-[20px]">
+                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Desenvolvedor </p>
                         <img class="w-[40px] h-[40px]" src="assets/img/formato-html.png" alt="">
                     </div>
                     <div class="w-[300px] h-[120px] mb-[15px]">
@@ -112,6 +95,23 @@
                         <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/css-3.png" alt="">
                         <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/js.png" alt="">
                         <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/tailwindcss.png" alt="">
+                    </div>
+                </div>
+                <div class="w-auto h-[350px]">
+                    <div class="flex justify-start items-center w-[310px] h-[50px] mb-[20px]">
+                        <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
+                        <img class="w-[40px] h-[40px]" src="assets/img/criacao.png" alt="">
+                    </div>
+                    <div class="w-[300px] h-[120px] mb-[15px]">
+                        <p class="text-[15px] text-[#AAAAAA] font-bold">
+                            Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver
+                            designs simples, mas criativos, para aprender e me divertir no processo.
+                            Uso os seguintes apps:
+                        </p>
+                    </div>
+                    <div class="flex w-auto h-[50x]">
+                        <img class="w-[50px] h-[50px] mr-[30px]" src="assets/img/figma.png" alt="">
+                        <img class="w-[50px] h-[50px] rounded-full" src="assets/img/canva.png" alt="">
                     </div>
                 </div>
             </div>
@@ -214,7 +214,50 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
+                <div class="flex justify-center items-center text-center w-[310px] h-[100px] mb-[30px]">
+                    <p class="text-[40px] text-[#AAAAAA] font-bold"> Me envie uma menssagem! </p>
+                </div>
+                <div class="flex justify-center items-center w-[310px] h-[100px] mb-[30px]">
+                    <p class="text-[16px] text-[#AAAAAA] font-bold text-center">
+                        Tem uma pergunta ou proposta, ou quer apenas dizer olá? Vá em frente.
+                    </p>
+                </div>
+                <form>
+                    <div class=" w-[300px] h-[90px] mb-[50px]">
+                        <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Seu nome </p>
+                        <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
+                            name="nome" placeholder="Digite seu nome">
+                        <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
+                    </div>
+                    <div class=" w-[300px] h-[90px] mb-[50px]">
+                        <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Endereço de email </p>
+                        <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
+                            name="nome" placeholder="Insira seu e-mail">
+                        <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
+                    </div>
+                    <div class=" w-[300px] h-auto mb-[50px]">
+                        <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Sua menssagem </p>
+                        <textarea
+                            class="w-[300px] h-[150px] text-[24px] text-[#AAAAAA] mb-[10px] appearance-none border-none outline-none resize-none bg-transparent p-0"
+                            name="menssagem"
+                            placeholder="Olá, acho que preciso de um projeto de design ou de um site. Quando podemos conversar sobre isso?"></textarea>
+                        <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
+                    </div>
+                    <div>
+                        <div class="flex justify-center items-center border border-white w-[300px] h-[70px]">
+                            <p class="text-[#FFFFFF] text-[24px] font-bold uppercase mr-[30px]"> Enviar </p>
+                            <img class="w-[40px] h-[40px]" src="assets/img/seta.png" alt="">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
