--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
                         <img class="w-[40px] h-[40px]" src="assets/img/criacao.png" alt="">
                     </div>
-                    <div class="w-[300px] h-[120px] mb-[15px]">
+                    <div class="w-[300px] h-[150px] mb-[15px]">
                         <p class="text-[15px] text-[#AAAAAA] font-bold">
-                            Sou um designer que cria projetos por hobby. Gosto de explorar ideias visuais e desenvolver
+                            Sou um desenvolvedor que cria alguns designer por hobby. Gosto de explorar ideias visuais e desenvolver
                             designs simples, mas criativos, para aprender e me divertir no processo.
                             Uso os seguintes apps:
                         </p>
@@ -225,19 +225,19 @@
                     </p>
                 </div>
                 <form>
-                    <div class=" w-[300px] h-[90px] mb-[50px]">
+                    <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Seu nome </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
                             name="nome" placeholder="Digite seu nome">
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
-                    <div class=" w-[300px] h-[90px] mb-[50px]">
+                    <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Endereço de email </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
                             name="nome" placeholder="Insira seu e-mail">
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
-                    <div class=" w-[300px] h-auto mb-[50px]">
+                    <div class="w-[300px] h-auto mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Sua menssagem </p>
                         <textarea
                             class="w-[300px] h-[150px] text-[24px] text-[#AAAAAA] mb-[10px] appearance-none border-none outline-none resize-none bg-transparent p-0"
@@ -256,8 +256,23 @@
         </section>
     </main>
     <footer>
-        
+        <div class="flex flex-col justify-center items-center w-auto h-[400px] mb-[30px]">
+            <div>
+                <div class="w-[300px] h-auto mb-[20px]">
+                    <a class="text-white text-[20px] font-light" href="">Fale comigo</a>
+                    <p class="text-[#AAAAAA] text-[20px] font-bold mt-[20px]"> k.oliveira2002@outlook.com </p>
+                </div>
+                <div class="flex flex-col w-[300px] h-auto mb-[20px]">
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meus projetos </a>
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meu currículo </a>
+                </div>
+                <div class="border border-[#AAAAAA] mb-[20px]"> </div>
+                <div> <p class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"> @ealim_ </p> </div>
+            </div>
+        </div>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
