--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="flex w-[130px] h-[120px] items-center justify-center">
                 <div class="flex w-[100px] h-[35px] border border-[#AAAAAA] items-center justify-center">
-                    <p class="text-[#AAAAAA] text-[15px] uppercase font-bold"> Contato </p>
+                    <a class="text-[#AAAAAA] text-[15px] uppercase font-bold" href="#contato"> Contato</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,8 @@
                     </div>
                     <div class="w-[300px] h-[150px] mb-[15px]">
                         <p class="text-[15px] text-[#AAAAAA] font-bold">
-                            Sou um desenvolvedor que cria alguns designer por hobby. Gosto de explorar ideias visuais e desenvolver
+                            Sou um desenvolvedor que cria alguns designer por hobby. Gosto de explorar ideias visuais e
+                            desenvolver
                             designs simples, mas criativos, para aprender e me divertir no processo.
                             Uso os seguintes apps:
                         </p>
@@ -206,6 +207,7 @@
                         </div>
                         <div class="w-[225px] h-auto">
                             <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
+                                <a href="https://www.figma.com/@kleiton"></a>
                                 <p class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"> Veja aqui </p>
                                 <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
                             </div>
@@ -214,7 +216,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="contato">
             <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
                 <div class="flex justify-center items-center text-center w-[310px] h-[100px] mb-[30px]">
                     <p class="text-[40px] text-[#AAAAAA] font-bold"> Me envie uma menssagem! </p>
@@ -260,14 +262,22 @@
             <div>
                 <div class="w-[300px] h-auto mb-[20px]">
                     <a class="text-white text-[20px] font-light" href="">Fale comigo</a>
-                    <p class="text-[#AAAAAA] text-[20px] font-bold mt-[20px]"> k.oliveira2002@outlook.com </p>
+                </div>
+                <div class="w-[300px] h-auto mb-[20px]">
+                    <a class="text-[#AAAAAA] text-[20px] font-bold"
+                        href="malito:k.oliveira2002@outlook.com"> k.oliveira2002@outlook.com </a>
                 </div>
                 <div class="flex flex-col w-[300px] h-auto mb-[20px]">
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meus projetos </a>
-                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meu currículo </a>
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"
+                    href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui"> Meu currículo
+                    </a>
                 </div>
                 <div class="border border-[#AAAAAA] mb-[20px]"> </div>
-                <div> <p class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"> @ealim_ </p> </div>
+                <div>
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href="https://www.instagram.com/ealim_/"
+                        target="_blank"> @ealim_ </a>
+                </div>
             </div>
         </div>
     </footer>
