--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
                 </div>
                 <div class="w-[300px] h-auto mb-[20px]">
                     <a class="text-[#AAAAAA] text-[20px] font-bold"
-                        href="malito:k.oliveira2002@outlook.com"> k.oliveira2002@outlook.com </a>
+                        href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui"> k.oliveira2002@outlook.com </a>
                 </div>
                 <div class="flex flex-col w-[300px] h-auto mb-[20px]">
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meus projetos </a>
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"
-                    href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui"> Meu currículo
+                    href="assets/arquivos/Currículo KLEITON OLIVEIRA.pdf.pdf" download=""> Meu currículo
                     </a>
                 </div>
                 <div class="border border-[#AAAAAA] mb-[20px]"> </div>
