--- a/index.html
+++ b/index.html
@@ -158,12 +158,13 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="projects">
             <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
                 <div class="flex flex-col justify-center items-center mb-[40px]">
                     <div class="w-[310px] h-[150px]">
                         <div class="w-[210px] h-auto mb-[15px]">
                             <p class="h-[50px] text-[40px] text-[#AAAAAA] font-bold"> Meus </p>
+                            <a href=""></a>
                             <p class="h-[50px] text-[40px] text-[#AAAAAA] font-bold"> Projetos </p>
                         </div>
                         <div class="w-[210px] h-[50px]">
@@ -268,9 +269,9 @@
                         href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui"> k.oliveira2002@outlook.com </a>
                 </div>
                 <div class="flex flex-col w-[300px] h-auto mb-[20px]">
-                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href=""> Meus projetos </a>
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href="#projects"> Meus projetos </a>
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"
-                    href="assets/arquivos/Currículo KLEITON OLIVEIRA.pdf.pdf" download=""> Meu currículo
+                    href="assets/arquivos/Currículo KLEITON OLIVEIRA.pdf.pdf" download="" target="_blank"> Meu currículo
                     </a>
                 </div>
                 <div class="border border-[#AAAAAA] mb-[20px]"> </div>
